<resources>
    <string name="app_name">Equipe Vision</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ponto_ideal">Ponto Ideal Soluções</string>
    <string name="rbsim">Sim</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voltar">Voltar</string>

    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="como_gostaria_de_ser_chamado">Como gostaria de ser chamado?</string>
    <string name="e_mail">e-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="nick">Nick</string>
    <string name="_0_15">0/15</string>
    <string name="selecione_avatar_ou_imagem_da_galeria">Selecione Avatar ou Imagem da Galeria</string>
    <string name="apelido">Apelido</string>
    <string name="deslogar">Deslogar</string>
    <string name="sair">Sair</string>

    <string name="rbnao">Não</string>
    <string name="pref_key">TabCamp</string>
    <string name="ligaatual">LIGAATUAL</string>
    <string name="carregando">Carregando ...</string>
    <string name="entrar_como_visitante">Entrar como Visitante</string>
    <string name="cadastar_por_e_mail">Cadastar por e-mail</string>
    <string name="versenha">"Visualizar "</string>
    <string name="logar">Logar</string>
    <string name="repetir_senha">Repetir Senha</string>
    <string name="senha_min_8_caracteres_letras_e_numeros">Senha (min. 8 caracteres, letras e numeros)</string>

    <string name="nome_ou_nick">Nome ou Nick</string>
    <string name="contar_letras">Contar letras</string>
    <string name="contar_60">0/60</string>
    <string name="contar_30">0/30</string>
    <string name="avatar">avatar</string>
    <string name="contar_15">0/15</string>
    <string name="nome_do_setor">Nome do Setor</string>
    <string name="cep_inicial">Cep Inicial</string>
    <string name="cep_final">Cep Final</string>
    <string name="cliente">Cliente</string>
    <string name="contar_50">0/50</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="avan_ar">Avançar</string>
    <string name="verificar_cpf">Verificar CPF</string>
    <string name="cep">CEP</string>
    <string name="cadastrar_buscar_cliente">Cadastrar/Buscar\nCliente</string>
    <string name="instalacao">Instalação</string>
    <string name="endereco">Endereço</string>
    <string name="contar_80">0/80</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="setor">Setor</string>
    <string name="status">Status</string>
    <string name="n_intalacoes">Nº de Instalações</string>
    <string name="data">Data:</string>
    <string name="capacidade">Capacidade -MEGA</string>
    <string name="valor">Valor - R$</string>
    <string name="descricao">Descrição</string>
    <string name="contar_120">0/120</string>
    <string name="contar_20">0/20</string>
    <string name="link">Link</string>
    <string name="produtos">Produtos</string>
    <string name="tipo_cob">Tipo de Cobrança</string>
    <string name="contar_10">0/10</string>
    <string name="tipo">Tipo:</string>
    <string name="edit_usu">Editar Usuario</string>
</resources>