<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cllogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/mprogressBar"
        style="@android:style/Widget.Holo.ProgressBar.Small"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/equipe_vision" />

    <Button
        android:id="@+id/btcad"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cadastar_por_e_mail"
        android:textColor="@color/fundo_azul_escuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="@color/fundo_azul_escuro"
        app:strokeColor="@color/fundo_azul_escuro" />

    <Button
        android:id="@+id/btabrelog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logar"
        android:textColor="@color/fundo_azul_escuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btcad"
        app:layout_constraintStart_toStartOf="@+id/btcad"
        app:layout_constraintTop_toBottomOf="@+id/btcad"
        app:rippleColor="@color/fundo_azul_escuro"
        app:strokeColor="@color/fundo_azul_escuro" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvaviso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp"
        android:padding="8dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/fundo_azul_escuro"
        app:cardCornerRadius="6dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btabrelog">

        <TextView
            android:id="@+id/txtaviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/fundo_azul_escuro"
            android:gravity="center"
            android:text="@string/carregando"
            android:textColor="@color/branco"
            android:textSize="24sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvdados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/fundo_azul_escuro"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cldadoslog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/fundo_alertas">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvemail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="6dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etemail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:autofillHints="@string/senha"
                        android:ems="10"
                        android:gravity="bottom"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:lineSpacingExtra="10sp"
                        android:maxLength="80"
                        android:textColor="@color/fundo_azul_escuro"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvsenha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvemail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etsenha"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:autofillHints="@string/senha"
                        android:ems="10"
                        android:gravity="bottom"
                        android:hint="@string/senha"
                        android:inputType="textPassword"
                        android:labelFor="@id/cvsenha"
                        android:textColor="@color/fundo_azul_escuro"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/eyesenhablack"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/eyesenhablack"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/versenha"
                        android:focusable="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/etsenha"
                        app:srcCompat="@drawable/ic_noeye_black" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btlogin"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:text="@string/login"
                android:textColor="@color/fundo_azul_escuro"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/btesquecisenha"
                app:layout_constraintStart_toStartOf="@+id/btesquecisenha"
                app:layout_constraintTop_toBottomOf="@+id/cvsenha"
                app:rippleColor="@color/riplle_bt_amarelo" />

            <!--                    android:textAlignment="center"-->
            <!--                    app:cornerRadius="10dp"-->
            <Button


                android:id="@+id/btesquecisenha"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/esqueci_a_senha"
                android:textColor="@color/fundo_azul_escuro"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btlogin"
                app:rippleColor="@color/fundo_azul_escuro"
                app:strokeColor="@color/fundo_azul_escuro" />

            <Button


                android:id="@+id/btvoltar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/voltar"
                android:textColor="@color/fundo_azul_escuro"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btesquecisenha"
                app:rippleColor="@color/fundo_azul_escuro"
                app:strokeColor="@color/fundo_azul_escuro" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
